@@ -1,8 +1,8 @@
 package fr.prisontycoon.commands;
 
 import fr.prisontycoon.PrisonTycoon;
+import fr.prisontycoon.data.MineData;
 import fr.prisontycoon.data.PlayerData;
-import fr.prisontycoon.managers.MineManager;
 import fr.prisontycoon.utils.NumberFormatter;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
@@ -18,8 +18,9 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 /**
- * Commande pour gérer les mines (normale, prestige, VIP)
- * Usage: /mine <list|tp|info|generate|types> [mine] [args]
+ * Commande pour gérer les mines - VERSION CORRIGÉE
+ * Utilise la nouvelle classe MineData externe
+ * Usage: /mine <list|tp|info|generate|types|accessible|stats|search> [args...]
  */
 public class MineCommand implements CommandExecutor, TabCompleter {
 
@@ -49,6 +50,9 @@ public class MineCommand implements CommandExecutor, TabCompleter {
             case "generate", "gen", "reset" -> handleGenerateCommand(player, args);
             case "types", "categories" -> handleTypesCommand(player);
             case "accessible", "access" -> handleAccessibleCommand(player);
+            case "stats", "statistics", "statistiques" -> handleStatsCommand(player);
+            case "search", "find", "chercher" -> handleSearchCommand(player, args);
+            case "current", "actuel" -> handleCurrentCommand(player);
             case "help", "aide" -> sendHelpMessage(player);
             default -> sendHelpMessage(player);
         }
@@ -60,31 +64,37 @@ public class MineCommand implements CommandExecutor, TabCompleter {
      * Gère /mine list [type]
      */
     private void handleListCommand(Player player, String[] args) {
-        MineManager.MineType filterType = null;
+        MineData.MineType filterType = null;
 
         // Filtrage par type si spécifié
         if (args.length >= 2) {
             try {
-                filterType = MineManager.MineType.valueOf(args[1].toUpperCase());
+                filterType = MineData.MineType.valueOf(args[1].toUpperCase());
             } catch (IllegalArgumentException e) {
-                player.sendMessage("§c❌ Type de mine invalide! Types disponibles: NORMAL, PRESTIGE, VIP");
+                player.sendMessage("§c❌ Type de mine invalide! Types disponibles: §eNORMAL§c, §ePRESTIGE§c, §eVIP");
                 return;
             }
         }
 
         player.sendMessage("§6═══════════════════════════════════");
-        player.sendMessage("§6         📍 LISTE DES MINES");
         if (filterType != null) {
-            player.sendMessage("§6         (Type: " + filterType.toString() + ")");
+            player.sendMessage("§6      📋 MINES " + getTypeDisplayName(filterType).toUpperCase());
+        } else {
+            player.sendMessage("§6         📋 TOUTES LES MINES");
         }
         player.sendMessage("§6═══════════════════════════════════");
 
-        List<MineManager.MineData> mines;
+        List<MineData> mines;
         if (filterType != null) {
             mines = plugin.getMineManager().getMinesByType(filterType);
         } else {
             mines = new ArrayList<>(plugin.getMineManager().getAllMines());
-            mines.sort((a, b) -> a.getId().compareToIgnoreCase(b.getId()));
+            mines.sort((a, b) -> {
+                if (a.getType() != b.getType()) {
+                    return a.getType().ordinal() - b.getType().ordinal();
+                }
+                return a.getId().compareToIgnoreCase(b.getId());
+            });
         }
 
         if (mines.isEmpty()) {
@@ -92,22 +102,33 @@ public class MineCommand implements CommandExecutor, TabCompleter {
             return;
         }
 
-        for (MineManager.MineData mine : mines) {
-            boolean canAccess = plugin.getMineManager().canAccessMine(player, mine.getId());
-            String accessIcon = canAccess ? "§a✅" : "§c🔒";
-            String typeColor = getTypeColor(mine.getType());
-
-            String beaconInfo = "";
-            if (mine.hasBeacons()) {
-                beaconInfo = String.format(" §e(%.1f%% beacons)", mine.getBeaconRate());
+        // Grouper et afficher par type
+        MineData.MineType currentType = null;
+        for (MineData mine : mines) {
+            if (currentType != mine.getType()) {
+                currentType = mine.getType();
+                player.sendMessage("");
+                player.sendMessage("§6📍 " + getTypeDisplayName(currentType) + ":");
             }
 
-            player.sendMessage(String.format("%s %s%s §7- %s%s",
-                    accessIcon, typeColor, mine.getDisplayName(), mine.getDescription(), beaconInfo));
+            boolean canAccess = plugin.getMineManager().canAccessMine(player, mine.getId());
+            String accessIcon = canAccess ? "§a✅" : "§c❌";
+            String mineInfo = "§7  " + accessIcon + " §f" + mine.getDisplayName();
+
+            // Ajout d'infos supplémentaires
+            if (mine.hasBeacons()) {
+                mineInfo += " §e(%.1f%% beacons)".formatted(mine.getBeaconRate());
+            }
+            if (mine.getRankupPrice() > 0) {
+                mineInfo += " §7- §a" + NumberFormatter.format(mine.getRankupPrice()) + "$";
+            }
+
+            player.sendMessage(mineInfo);
         }
 
+        player.sendMessage("");
+        player.sendMessage("§7Total: §6" + mines.size() + " §7mines");
         player.sendMessage("§7Utilisez §6/mine tp <nom> §7pour vous téléporter");
-        player.sendMessage("§7Utilisez §6/mine info <nom> §7pour plus d'informations");
     }
 
     /**
@@ -116,45 +137,40 @@ public class MineCommand implements CommandExecutor, TabCompleter {
     private void handleTeleportCommand(Player player, String[] args) {
         if (args.length < 2) {
             player.sendMessage("§c❌ Usage: /mine tp <nom_mine>");
+            player.sendMessage("§7Utilisez §6/mine accessible §7pour voir vos mines");
             return;
         }
 
         String mineName = args[1].toLowerCase();
 
-        // Essayer de trouver la mine (avec ou sans préfixe "mine-")
-        String mineId = mineName.startsWith("mine-") ? mineName : "mine-" + mineName;
+        // Recherche intelligente de la mine
+        String mineId = findMineId(mineName);
 
-        // Vérifier les autres formats (prestige, vip)
-        String finalMineId = mineId;
-        if (!plugin.getMineManager().getAllMines().stream().anyMatch(m -> m.getId().equals(finalMineId))) {
-            // Essayer les formats alternatifs
-            List<String> possibleIds = Arrays.asList(
-                    mineName,
-                    "mine-" + mineName,
-                    "mine-prestige" + mineName,
-                    "mine-vip" + mineName
-            );
+        if (mineId == null) {
+            player.sendMessage("§c❌ Mine introuvable: §e" + mineName);
 
-            String foundId = null;
-            for (String possibleId : possibleIds) {
-                if (plugin.getMineManager().getAllMines().stream().anyMatch(m -> m.getId().equals(possibleId))) {
-                    foundId = possibleId;
-                    break;
-                }
+            // Suggestions de mines similaires
+            List<MineData> suggestions = plugin.getMineManager().searchMines(mineName);
+            if (!suggestions.isEmpty()) {
+                player.sendMessage("§7Mines similaires:");
+                suggestions.stream().limit(3).forEach(mine ->
+                        player.sendMessage("§7  • §6" + mine.getId() + " §7(§f" + mine.getDisplayName() + "§7)")
+                );
             }
-
-            if (foundId == null) {
-                player.sendMessage("§c❌ Mine introuvable: " + mineName);
-                player.sendMessage("§7Utilisez §6/mine list §7pour voir toutes les mines");
-                return;
-            }
-
-            mineId = foundId;
+            return;
         }
 
         boolean success = plugin.getMineManager().teleportToMine(player, mineId);
         if (!success) {
-            player.sendMessage("§c❌ Impossible de se téléporter à cette mine!");
+            MineData mine = plugin.getMineManager().getMine(mineId);
+            if (mine != null) {
+                // Message d'erreur détaillé selon la raison
+                if (!plugin.getMineManager().canAccessMine(player, mineId)) {
+                    showAccessRequirements(player, mine);
+                } else {
+                    player.sendMessage("§c❌ Erreur lors de la téléportation!");
+                }
+            }
         }
     }
 
@@ -168,76 +184,52 @@ public class MineCommand implements CommandExecutor, TabCompleter {
         }
 
         String mineName = args[1].toLowerCase();
-        String mineId = mineName.startsWith("mine-") ? mineName : "mine-" + mineName;
+        String mineId = findMineId(mineName);
 
-        // Chercher la mine (même logique que teleport)
-        String finalMineId = mineId;
-        if (!plugin.getMineManager().getAllMines().stream().anyMatch(m -> m.getId().equals(finalMineId))) {
-            List<String> possibleIds = Arrays.asList(
-                    mineName,
-                    "mine-" + mineName,
-                    "mine-prestige" + mineName,
-                    "mine-vip" + mineName
-            );
-
-            String foundId = null;
-            for (String possibleId : possibleIds) {
-                if (plugin.getMineManager().getAllMines().stream().anyMatch(m -> m.getId().equals(possibleId))) {
-                    foundId = possibleId;
-                    break;
-                }
-            }
-
-            if (foundId == null) {
-                player.sendMessage("§c❌ Mine introuvable: " + mineName);
-                return;
-            }
-
-            mineId = foundId;
+        if (mineId == null) {
+            player.sendMessage("§c❌ Mine introuvable: §e" + mineName);
+            return;
         }
 
         String info = plugin.getMineManager().getMineInfo(player, mineId);
-        player.sendMessage("§6═══════════════════════════════════");
         player.sendMessage(info);
-        player.sendMessage("§6═══════════════════════════════════");
     }
 
     /**
-     * Gère /mine generate <mine> (admin seulement)
+     * Gère /mine generate <mine|all> (admin seulement)
      */
     private void handleGenerateCommand(Player player, String[] args) {
         if (!player.hasPermission("specialmine.admin")) {
-            player.sendMessage("§c❌ Vous n'avez pas la permission!");
+            player.sendMessage("§c❌ Vous n'avez pas la permission d'utiliser cette commande!");
             return;
         }
 
         if (args.length < 2) {
-            player.sendMessage("§c❌ Usage: /mine generate <nom_mine|all>");
+            player.sendMessage("§c❌ Usage: /mine generate <mine|all>");
             return;
         }
 
         String target = args[1].toLowerCase();
 
         if (target.equals("all")) {
-            player.sendMessage("§e🔄 Génération de toutes les mines en cours...");
-
-            for (MineManager.MineData mine : plugin.getMineManager().getAllMines()) {
-                plugin.getMineManager().generateMine(mine.getId());
-            }
-
+            player.sendMessage("§e🔄 Génération de toutes les mines...");
+            plugin.getMineManager().resetAllMines();
             player.sendMessage("§a✅ Toutes les mines ont été régénérées!");
             return;
         }
 
-        // Génération d'une mine spécifique
-        String mineId = target.startsWith("mine-") ? target : "mine-" + target;
-
-        if (!plugin.getMineManager().getAllMines().stream().anyMatch(m -> m.getId().equals(mineId))) {
-            player.sendMessage("§c❌ Mine introuvable: " + target);
+        String mineId = findMineId(target);
+        if (mineId == null) {
+            player.sendMessage("§c❌ Mine introuvable: §e" + target);
             return;
         }
 
-        player.sendMessage("§e🔄 Génération de la mine " + mineId + "...");
+        if (plugin.getMineManager().isMineGenerating(mineId)) {
+            player.sendMessage("§c❌ Cette mine est déjà en cours de génération!");
+            return;
+        }
+
+        player.sendMessage("§e🔄 Génération de la mine §6" + mineId + "§e...");
         plugin.getMineManager().generateMine(mineId);
         player.sendMessage("§a✅ Mine générée avec succès!");
     }
@@ -251,28 +243,32 @@ public class MineCommand implements CommandExecutor, TabCompleter {
         player.sendMessage("§6═══════════════════════════════════");
 
         // Compter les mines par type
-        List<MineManager.MineData> normalMines = plugin.getMineManager().getMinesByType(MineManager.MineType.NORMAL);
-        List<MineManager.MineData> prestigeMines = plugin.getMineManager().getMinesByType(MineManager.MineType.PRESTIGE);
-        List<MineManager.MineData> vipMines = plugin.getMineManager().getMinesByType(MineManager.MineType.VIP);
+        List<MineData> normalMines = plugin.getMineManager().getMinesByType(MineData.MineType.NORMAL);
+        List<MineData> prestigeMines = plugin.getMineManager().getMinesByType(MineData.MineType.PRESTIGE);
+        List<MineData> vipMines = plugin.getMineManager().getMinesByType(MineData.MineType.VIP);
 
         player.sendMessage("§f📍 NORMALES §7(" + normalMines.size() + " mines)");
         player.sendMessage("§7  Mines standard de A à Z");
         player.sendMessage("§7  Débloquées par rankup");
+        player.sendMessage("§7  Exemple: §6/mine tp a");
 
         player.sendMessage("");
         player.sendMessage("§d📍 PRESTIGE §7(" + prestigeMines.size() + " mines)");
         player.sendMessage("§7  Mines exclusives aux joueurs prestige");
         player.sendMessage("§7  Contiennent des beacons rares");
+        player.sendMessage("§7  Exemple: §6/mine tp p1");
 
         player.sendMessage("");
         player.sendMessage("§6📍 VIP §7(" + vipMines.size() + " mines)");
         player.sendMessage("§7  Mines exclusives aux VIP");
         player.sendMessage("§7  Ressources de haute qualité");
+        player.sendMessage("§7  Exemple: §6/mine tp vip1");
 
         PlayerData playerData = plugin.getPlayerDataManager().getPlayerData(player.getUniqueId());
         player.sendMessage("");
         player.sendMessage("§e📊 Votre accès:");
-        player.sendMessage("§7• Rang actuel: " + plugin.getMineManager().getRankColor(plugin.getMineManager().getCurrentRank(player)) + plugin.getMineManager().getCurrentRank(player).toUpperCase());
+        String currentRank = plugin.getMineManager().getCurrentRank(player);
+        player.sendMessage("§7• Rang actuel: " + plugin.getMineManager().getRankColor(currentRank) + currentRank.toUpperCase());
         player.sendMessage("§7• Prestige: " + playerData.getPrestigeDisplayName());
         player.sendMessage("§7• VIP: " + (player.hasPermission("specialmine.vip") ? "§a✅" : "§c❌"));
     }
@@ -281,7 +277,7 @@ public class MineCommand implements CommandExecutor, TabCompleter {
      * Gère /mine accessible
      */
     private void handleAccessibleCommand(Player player) {
-        List<MineManager.MineData> accessibleMines = plugin.getMineManager().getAccessibleMines(player);
+        List<MineData> accessibleMines = plugin.getMineManager().getAccessibleMines(player);
 
         player.sendMessage("§6═══════════════════════════════════");
         player.sendMessage("§6      🔓 MINES ACCESSIBLES");
@@ -289,96 +285,262 @@ public class MineCommand implements CommandExecutor, TabCompleter {
 
         if (accessibleMines.isEmpty()) {
             player.sendMessage("§7Aucune mine accessible.");
+            player.sendMessage("§7Améliorez votre rang avec §6/rankup§7!");
             return;
         }
 
         // Grouper par type
-        List<MineManager.MineData> normalAccessible = accessibleMines.stream()
-                .filter(m -> m.getType() == MineManager.MineType.NORMAL)
+        List<MineData> normalAccessible = accessibleMines.stream()
+                .filter(m -> m.getType() == MineData.MineType.NORMAL)
                 .collect(Collectors.toList());
 
-        List<MineManager.MineData> prestigeAccessible = accessibleMines.stream()
-                .filter(m -> m.getType() == MineManager.MineType.PRESTIGE)
+        List<MineData> prestigeAccessible = accessibleMines.stream()
+                .filter(m -> m.getType() == MineData.MineType.PRESTIGE)
                 .collect(Collectors.toList());
 
-        List<MineManager.MineData> vipAccessible = accessibleMines.stream()
-                .filter(m -> m.getType() == MineManager.MineType.VIP)
+        List<MineData> vipAccessible = accessibleMines.stream()
+                .filter(m -> m.getType() == MineData.MineType.VIP)
                 .collect(Collectors.toList());
 
         if (!normalAccessible.isEmpty()) {
             player.sendMessage("§f📍 Mines normales:");
-            for (MineManager.MineData mine : normalAccessible) {
-                player.sendMessage("§7  • " + mine.getDisplayName());
+            for (MineData mine : normalAccessible) {
+                player.sendMessage("§7  • §6/mine tp " + mine.getId() + " §7- §f" + mine.getDisplayName());
             }
         }
 
         if (!prestigeAccessible.isEmpty()) {
+            player.sendMessage("");
             player.sendMessage("§d📍 Mines prestige:");
-            for (MineManager.MineData mine : prestigeAccessible) {
-                String beacons = mine.hasBeacons() ? String.format(" §e(%.1f%% beacons)", mine.getBeaconRate()) : "";
-                player.sendMessage("§7  • " + mine.getDisplayName() + beacons);
+            for (MineData mine : prestigeAccessible) {
+                String beacons = mine.hasBeacons() ?
+                        String.format(" §e(%.1f%% beacons)", mine.getBeaconRate()) : "";
+                player.sendMessage("§7  • §6/mine tp " + mine.getId() + " §7- §f" + mine.getDisplayName() + beacons);
             }
         }
 
         if (!vipAccessible.isEmpty()) {
+            player.sendMessage("");
             player.sendMessage("§6📍 Mines VIP:");
-            for (MineManager.MineData mine : vipAccessible) {
-                String beacons = mine.hasBeacons() ? String.format(" §e(%.1f%% beacons)", mine.getBeaconRate()) : "";
-                player.sendMessage("§7  • " + mine.getDisplayName() + beacons);
+            for (MineData mine : vipAccessible) {
+                String beacons = mine.hasBeacons() ?
+                        String.format(" §e(%.1f%% beacons)", mine.getBeaconRate()) : "";
+                player.sendMessage("§7  • §6/mine tp " + mine.getId() + " §7- §f" + mine.getDisplayName() + beacons);
             }
         }
 
         player.sendMessage("");
-        player.sendMessage("§7Total: §6" + accessibleMines.size() + " §7mines accessibles");
+        player.sendMessage("§7Total accessible: §6" + accessibleMines.size() + " §7mines");
     }
 
     /**
-     * Obtient la couleur d'affichage d'un type de mine
+     * NOUVEAU: Gère /mine stats
      */
-    private String getTypeColor(MineManager.MineType type) {
+    private void handleStatsCommand(Player player) {
+        String stats = plugin.getMineManager().getMinesStatistics();
+        player.sendMessage(stats);
+
+        // Ajout de stats personnelles
+        PlayerData playerData = plugin.getPlayerDataManager().getPlayerData(player.getUniqueId());
+        String currentMine = plugin.getMineManager().getPlayerCurrentMine(player);
+
+        player.sendMessage("§e📊 Vos statistiques:");
+        player.sendMessage("§7• Mine actuelle: " + (currentMine != null ? "§6" + currentMine : "§cAucune"));
+        player.sendMessage("§7• Mines accessibles: §6" + plugin.getMineManager().getAccessibleMines(player).size());
+        player.sendMessage("§7• Rang: " + plugin.getMineManager().getRankColor(plugin.getMineManager().getCurrentRank(player)) +
+                plugin.getMineManager().getCurrentRank(player).toUpperCase());
+        player.sendMessage("§7• Prestige: " + playerData.getPrestigeDisplayName());
+    }
+
+    /**
+     * NOUVEAU: Gère /mine search <terme>
+     */
+    private void handleSearchCommand(Player player, String[] args) {
+        if (args.length < 2) {
+            player.sendMessage("§c❌ Usage: /mine search <terme>");
+            return;
+        }
+
+        String query = String.join(" ", Arrays.copyOfRange(args, 1, args.length));
+        List<MineData> results = plugin.getMineManager().searchMines(query);
+
+        player.sendMessage("§6═══════════════════════════════════");
+        player.sendMessage("§6      🔍 RECHERCHE: " + query.toUpperCase());
+        player.sendMessage("§6═══════════════════════════════════");
+
+        if (results.isEmpty()) {
+            player.sendMessage("§7Aucune mine trouvée pour: §e" + query);
+            return;
+        }
+
+        for (MineData mine : results) {
+            boolean canAccess = plugin.getMineManager().canAccessMine(player, mine.getId());
+            String accessIcon = canAccess ? "§a✅" : "§c❌";
+
+            player.sendMessage("§7" + accessIcon + " §6" + mine.getId() + " §7- §f" + mine.getDisplayName() +
+                    " §7(" + getTypeDisplayName(mine.getType()) + "§7)");
+        }
+
+        player.sendMessage("");
+        player.sendMessage("§7Trouvé: §6" + results.size() + " §7mine(s)");
+    }
+
+    /**
+     * NOUVEAU: Gère /mine current
+     */
+    private void handleCurrentCommand(Player player) {
+        String currentMine = plugin.getMineManager().getPlayerCurrentMine(player);
+
+        if (currentMine == null) {
+            player.sendMessage("§c❌ Vous n'êtes actuellement dans aucune mine!");
+            player.sendMessage("§7Utilisez §6/mine tp <nom> §7pour vous téléporter à une mine");
+            return;
+        }
+
+        MineData mine = plugin.getMineManager().getMine(currentMine);
+        if (mine == null) {
+            player.sendMessage("§c❌ Mine actuelle introuvable dans la configuration!");
+            return;
+        }
+
+        player.sendMessage("§6═══════════════════════════════════");
+        player.sendMessage("§6         📍 MINE ACTUELLE");
+        player.sendMessage("§6═══════════════════════════════════");
+        player.sendMessage("§7Vous êtes dans: §6" + mine.getDisplayName());
+        player.sendMessage("§7Type: " + getTypeDisplayName(mine.getType()));
+        player.sendMessage("§7ID: §f" + mine.getId());
+
+        if (mine.hasBeacons()) {
+            player.sendMessage("§7Taux beacons: §e" + String.format("%.1f%%", mine.getBeaconRate()));
+        }
+
+        player.sendMessage("");
+        player.sendMessage("§7Utilisez §6/mine info " + mine.getId() + " §7pour plus de détails");
+    }
+
+    // ==================== MÉTHODES UTILITAIRES ====================
+
+    /**
+     * Recherche intelligente d'une mine par son nom
+     */
+    private String findMineId(String mineName) {
+        // Recherche exacte d'abord
+        if (plugin.getMineManager().mineExists(mineName)) {
+            return mineName;
+        }
+
+        // Essayer différents formats
+        List<String> possibleIds = Arrays.asList(
+                mineName.toLowerCase(),
+                "mine-" + mineName.toLowerCase(),
+                mineName.toLowerCase().replace("mine-", ""),
+                mineName.toLowerCase().replace("mine_", ""),
+                mineName.toLowerCase().replace(" ", ""),
+                mineName.toLowerCase().replace("-", "")
+        );
+
+        for (String possibleId : possibleIds) {
+            if (plugin.getMineManager().mineExists(possibleId)) {
+                return possibleId;
+            }
+        }
+
+        // Recherche partielle
+        List<MineData> matches = plugin.getMineManager().searchMines(mineName);
+        if (!matches.isEmpty()) {
+            return matches.get(0).getId(); // Retourne le premier match
+        }
+
+        return null;
+    }
+
+    /**
+     * Affiche les prérequis d'accès pour une mine
+     */
+    private void showAccessRequirements(Player player, MineData mine) {
+        player.sendMessage("§c❌ Accès refusé à la mine §6" + mine.getDisplayName());
+
+        PlayerData playerData = plugin.getPlayerDataManager().getPlayerData(player.getUniqueId());
+
+        if (mine.getRequiredPrestige() > playerData.getPrestigeLevel()) {
+            player.sendMessage("§7Prestige requis: §d" + mine.getRequiredPrestige() +
+                    " §7(actuel: §d" + playerData.getPrestigeLevel() + "§7)");
+        }
+
+        if (mine.isVipOnly() && !player.hasPermission("specialmine.vip")) {
+            player.sendMessage("§7Statut §6VIP §7requis");
+        }
+
+        if (mine.getRequiredPermission() != null && !player.hasPermission(mine.getRequiredPermission())) {
+            player.sendMessage("§7Permission requise: §e" + mine.getRequiredPermission());
+        }
+
+        String currentRank = plugin.getMineManager().getCurrentRank(player);
+        if (mine.getType() == MineData.MineType.NORMAL &&
+                !plugin.getMineManager().canAccessMine(player, mine.getId())) {
+            player.sendMessage("§7Rang requis: §6" + mine.getRequiredRank().toUpperCase() +
+                    " §7(actuel: §6" + currentRank.toUpperCase() + "§7)");
+        }
+    }
+
+    /**
+     * Obtient le nom d'affichage d'un type de mine
+     */
+    private String getTypeDisplayName(MineData.MineType type) {
         return switch (type) {
-            case NORMAL -> "§f";
-            case PRESTIGE -> "§d";
-            case VIP -> "§6";
+            case NORMAL -> "§fNormale";
+            case PRESTIGE -> "§dPrestige";
+            case VIP -> "§6VIP";
         };
     }
 
     /**
-     * Affiche l'aide de la commande
+     * Affiche le message d'aide
      */
     private void sendHelpMessage(Player player) {
-        player.sendMessage("§6§l╔═══════════════════════════════════╗");
-        player.sendMessage("§6§l║           §e⛏ MINES ⛏             §6§l║");
-        player.sendMessage("§6§l╠═══════════════════════════════════╣");
-        player.sendMessage("§6§l║ §e/mine list [type]               §6§l║");
-        player.sendMessage("§6§l║ §7├─ Liste toutes les mines        §6§l║");
-        player.sendMessage("§6§l║                                   §6§l║");
-        player.sendMessage("§6§l║ §e/mine tp <mine>                 §6§l║");
-        player.sendMessage("§6§l║ §7├─ Se téléporter à une mine      §6§l║");
-        player.sendMessage("§6§l║                                   §6§l║");
-        player.sendMessage("§6§l║ §e/mine info <mine>               §6§l║");
-        player.sendMessage("§6§l║ §7├─ Informations sur une mine     §6§l║");
-        player.sendMessage("§6§l║                                   §6§l║");
-        player.sendMessage("§6§l║ §e/mine types                     §6§l║");
-        player.sendMessage("§6§l║ §7├─ Types de mines disponibles    §6§l║");
-        player.sendMessage("§6§l║                                   §6§l║");
-        player.sendMessage("§6§l║ §e/mine accessible                §6§l║");
-        player.sendMessage("§6§l║ §7├─ Mines que vous pouvez visiter §6§l║");
+        player.sendMessage("§6╔═══════════════════════════════════╗");
+        player.sendMessage("§6║           §f§lCOMMANDES MINES          §6║");
+        player.sendMessage("§6╠═══════════════════════════════════╣");
+        player.sendMessage("§6║ §e/mine list [type]               §6║");
+        player.sendMessage("§6║ §7├─ Liste des mines disponibles   §6║");
+        player.sendMessage("§6║                                   §6║");
+        player.sendMessage("§6║ §e/mine tp <mine>                 §6║");
+        player.sendMessage("§6║ §7├─ Se téléporter à une mine      §6║");
+        player.sendMessage("§6║                                   §6║");
+        player.sendMessage("§6║ §e/mine info <mine>               §6║");
+        player.sendMessage("§6║ §7├─ Informations sur une mine     §6║");
+        player.sendMessage("§6║                                   §6║");
+        player.sendMessage("§6║ §e/mine accessible                §6║");
+        player.sendMessage("§6║ §7├─ Mines que vous pouvez visiter §6║");
+        player.sendMessage("§6║                                   §6║");
+        player.sendMessage("§6║ §e/mine types                     §6║");
+        player.sendMessage("§6║ §7├─ Types de mines disponibles    §6║");
+        player.sendMessage("§6║                                   §6║");
+        player.sendMessage("§6║ §e/mine search <terme>            §6║");
+        player.sendMessage("§6║ §7├─ Rechercher des mines          §6║");
+        player.sendMessage("§6║                                   §6║");
+        player.sendMessage("§6║ §e/mine current                   §6║");
+        player.sendMessage("§6║ §7├─ Mine actuelle                 §6║");
+        player.sendMessage("§6║                                   §6║");
+        player.sendMessage("§6║ §e/mine stats                     §6║");
+        player.sendMessage("§6║ §7├─ Statistiques des mines        §6║");
 
         if (player.hasPermission("specialmine.admin")) {
-            player.sendMessage("§6§l║                                   §6§l║");
-            player.sendMessage("§6§l║ §c/mine generate <mine|all>       §6§l║");
-            player.sendMessage("§6§l║ §7├─ Régénérer une/toutes mines   §6§l║");
+            player.sendMessage("§6║                                   §6║");
+            player.sendMessage("§6║ §c/mine generate <mine|all>       §6║");
+            player.sendMessage("§6║ §7├─ Régénérer une/toutes mines   §6║");
         }
 
-        player.sendMessage("§6§l╚═══════════════════════════════════╝");
+        player.sendMessage("§6╚═══════════════════════════════════╝");
 
         // Statistiques rapides
         int totalMines = plugin.getMineManager().getAllMines().size();
         int accessibleMines = plugin.getMineManager().getAccessibleMines(player).size();
+        String currentMine = plugin.getMineManager().getPlayerCurrentMine(player);
 
         player.sendMessage("");
         player.sendMessage("§7📊 Mines disponibles: §6" + accessibleMines + "§7/§6" + totalMines);
+        player.sendMessage("§7📍 Mine actuelle: " + (currentMine != null ? "§6" + currentMine : "§cAucune"));
     }
 
     @Override
@@ -387,7 +549,7 @@ public class MineCommand implements CommandExecutor, TabCompleter {
 
         if (args.length == 1) {
             List<String> subCommands = new ArrayList<>(Arrays.asList(
-                    "list", "tp", "info", "types", "accessible", "help"
+                    "list", "tp", "info", "types", "accessible", "stats", "search", "current", "help"
             ));
 
             if (sender.hasPermission("specialmine.admin")) {
@@ -402,17 +564,34 @@ public class MineCommand implements CommandExecutor, TabCompleter {
                     StringUtil.copyPartialMatches(args[1], types, completions);
                 }
                 case "tp", "info", "generate" -> {
-                    // Suggérer les noms de mines
-                    List<String> mineNames = plugin.getMineManager().getAllMines().stream()
-                            .map(mine -> mine.getId().replace("mine-", ""))
-                            .collect(Collectors.toList());
+                    // Suggérer les noms de mines accessibles pour tp et info
+                    List<String> mineNames = new ArrayList<>();
+
+                    if (sender instanceof Player player) {
+                        if (args[0].toLowerCase().equals("tp")) {
+                            // Pour tp, seulement les mines accessibles
+                            mineNames = plugin.getMineManager().getAccessibleMines(player).stream()
+                                    .map(MineData::getId)
+                                    .collect(Collectors.toList());
+                        } else {
+                            // Pour info et generate, toutes les mines
+                            mineNames = plugin.getMineManager().getAllMines().stream()
+                                    .map(MineData::getId)
+                                    .collect(Collectors.toList());
+                        }
+                    }
 
                     StringUtil.copyPartialMatches(args[1], mineNames, completions);
 
                     // Ajouter "all" pour generate
-                    if (args[0].toLowerCase().equals("generate")) {
+                    if (args[0].toLowerCase().equals("generate") && sender.hasPermission("specialmine.admin")) {
                         StringUtil.copyPartialMatches(args[1], List.of("all"), completions);
                     }
+                }
+                case "search" -> {
+                    // Suggérer quelques termes de recherche courants
+                    List<String> searchTerms = Arrays.asList("normal", "prestige", "vip", "beacon");
+                    StringUtil.copyPartialMatches(args[1], searchTerms, completions);
                 }
             }
         }
