@@ -1,136 +1,151 @@
 package fr.prisontycoon.managers;
 
 import fr.prisontycoon.PrisonTycoon;
+import fr.prisontycoon.data.MineData;
 import fr.prisontycoon.data.PlayerData;
 import org.bukkit.*;
 import org.bukkit.block.Block;
-import org.bukkit.configuration.ConfigurationSection;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
 
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.stream.Collectors;
 
 /**
- * Gestionnaire des mines amélioré avec support Prestige et VIP
+ * Gestionnaire des mines complet - CORRIGÉ pour utiliser MineData externe
+ * Support des mines normales, prestige et VIP avec génération optimisée
  */
 public class MineManager {
 
     private final PrisonTycoon plugin;
     private final Map<String, MineData> mines = new ConcurrentHashMap<>();
     private final Map<String, Long> mineResetTimes = new ConcurrentHashMap<>();
+    private final Map<String, Boolean> mineGenerating = new ConcurrentHashMap<>();
     private final Random random = new Random();
-
-    // Types de mines
-    public enum MineType {
-        NORMAL,     // Mines A-Z normales
-        PRESTIGE,   // Mines prestige (P1, P11, etc.)
-        VIP         // Mines VIP
-    }
 
     public MineManager(PrisonTycoon plugin) {
         this.plugin = plugin;
-        loadMinesFromConfig();
+        loadMinesFromConfigManager();
         startMineResetScheduler();
     }
 
     /**
-     * Charge toutes les mines depuis la configuration
+     * CORRIGÉ: Charge les mines depuis le ConfigManager au lieu de la config directe
      */
-    private void loadMinesFromConfig() {
-        ConfigurationSection minesSection = plugin.getConfig().getConfigurationSection("mines");
-        if (minesSection == null) {
-            plugin.getPluginLogger().warning("Aucune mine configurée!");
+    private void loadMinesFromConfigManager() {
+        plugin.getPluginLogger().info("§7Chargement des mines depuis ConfigManager...");
+
+        // Récupère toutes les mines du ConfigManager corrigé
+        Map<String, MineData> configMines = plugin.getConfigManager().getAllMines();
+
+        if (configMines.isEmpty()) {
+            plugin.getPluginLogger().warning("§cAucune mine trouvée dans ConfigManager!");
             return;
         }
 
-        for (String mineId : minesSection.getKeys(false)) {
+        for (Map.Entry<String, MineData> entry : configMines.entrySet()) {
+            String mineId = entry.getKey();
+            MineData mineData = entry.getValue();
+
+            // Validation supplémentaire
+            if (mineData.getVolume() <= 0) {
+                plugin.getPluginLogger().warning("§cMine " + mineId + " a un volume invalide: " + mineData.getVolume());
+                continue;
+            }
+
+            if (!mineData.isCompositionValid()) {
+                plugin.getPluginLogger().warning("§cMine " + mineId + " a une composition invalide");
+                // On peut quand même la charger avec un avertissement
+            }
+
+            mines.put(mineId, mineData);
+            plugin.getPluginLogger().info("§aMine chargée: " + mineId + " (Type: " + mineData.getType() +
+                    ", Volume: " + mineData.getVolume() + " blocs)");
+        }
+
+        plugin.getPluginLogger().info("§aMines chargées: " + mines.size());
+    }
+
+    /**
+     * Génère une mine complète de manière optimisée
+     */
+    public void generateMine(String mineId) {
+        MineData mine = mines.get(mineId);
+        if (mine == null) {
+            plugin.getPluginLogger().warning("§cTentative de génération d'une mine inexistante: " + mineId);
+            return;
+        }
+
+        // Vérification si déjà en cours de génération
+        if (mineGenerating.getOrDefault(mineId, false)) {
+            plugin.getPluginLogger().debug("Mine " + mineId + " déjà en cours de génération");
+            return;
+        }
+
+        World world = Bukkit.getWorld(mine.getWorldName());
+        if (world == null) {
+            plugin.getPluginLogger().severe("§cMonde introuvable pour la mine " + mineId + ": " + mine.getWorldName());
+            return;
+        }
+
+        mineGenerating.put(mineId, true);
+        plugin.getPluginLogger().info("§7Génération de la mine " + mineId + "...");
+
+        // Notification aux joueurs dans la mine
+        notifyPlayersInMine(mineId, "§e⚠️ Régénération de la mine en cours...");
+
+        long startTime = System.currentTimeMillis();
+
+        // Génération asynchrone pour éviter les lags
+        Bukkit.getScheduler().runTaskAsynchronously(plugin, () -> {
             try {
-                MineData mineData = loadMineData(mineId, minesSection.getConfigurationSection(mineId));
-                if (mineData != null) {
-                    mines.put(mineId, mineData);
-                    plugin.getPluginLogger().info("Mine chargée: " + mineId + " (Type: " + mineData.getType() + ")");
+                int blocksGenerated = 0;
+
+                // Génération optimisée par chunks
+                for (int x = mine.getMinX(); x <= mine.getMaxX(); x++) {
+                    for (int y = mine.getMinY(); y <= mine.getMaxY(); y++) {
+                        for (int z = mine.getMinZ(); z <= mine.getMaxZ(); z++) {
+                            // Utilise la nouvelle méthode getRandomMaterial
+                            Material material = mine.getRandomMaterial(random);
+
+                            // Placement synchrone du bloc
+                            final int finalX = x, finalY = y, finalZ = z;
+                            final Material finalMaterial = material;
+
+                            Bukkit.getScheduler().runTask(plugin, () -> {
+                                world.getBlockAt(finalX, finalY, finalZ).setType(finalMaterial);
+                            });
+
+                            blocksGenerated++;
+                        }
+                    }
                 }
+
+                // Finalisation synchrone
+                int finalBlocksGenerated = blocksGenerated;
+                Bukkit.getScheduler().runTask(plugin, () -> {
+                    mineResetTimes.put(mineId, System.currentTimeMillis());
+                    mineGenerating.put(mineId, false);
+
+                    long duration = System.currentTimeMillis() - startTime;
+                    plugin.getPluginLogger().info("§aMine " + mineId + " générée: " + finalBlocksGenerated +
+                            " blocs en " + duration + "ms");
+
+                    // Notification de fin
+                    notifyPlayersInMine(mineId, "§a✅ Mine régénérée avec succès!");
+                });
+
             } catch (Exception e) {
-                plugin.getPluginLogger().severe("Erreur lors du chargement de la mine " + mineId + ": " + e.getMessage());
+                plugin.getPluginLogger().severe("§cErreur lors de la génération de la mine " + mineId + ":");
+                e.printStackTrace();
+                mineGenerating.put(mineId, false);
             }
-        }
-
-        plugin.getPluginLogger().info("Mines chargées: " + mines.size());
+        });
     }
 
     /**
-     * Charge les données d'une mine depuis la configuration
-     */
-    private MineData loadMineData(String mineId, ConfigurationSection section) {
-        if (section == null) return null;
-
-        // Coordonnées
-        ConfigurationSection coords = section.getConfigurationSection("coordinates");
-        if (coords == null) {
-            plugin.getPluginLogger().warning("Coordonnées manquantes pour la mine: " + mineId);
-            return null;
-        }
-
-        String worldName = section.getString("world", "world");
-        int minX = coords.getInt("min-x");
-        int minY = coords.getInt("min-y");
-        int minZ = coords.getInt("min-z");
-        int maxX = coords.getInt("max-x");
-        int maxY = coords.getInt("max-y");
-        int maxZ = coords.getInt("max-z");
-
-        // Composition des blocs
-        ConfigurationSection blocks = section.getConfigurationSection("blocks");
-        if (blocks == null) {
-            plugin.getPluginLogger().warning("Composition de blocs manquante pour la mine: " + mineId);
-            return null;
-        }
-
-        Map<Material, Double> blockComposition = new HashMap<>();
-        for (String blockName : blocks.getKeys(false)) {
-            try {
-                Material material = Material.valueOf(blockName.toUpperCase());
-                double probability = blocks.getDouble(blockName);
-                blockComposition.put(material, probability);
-            } catch (IllegalArgumentException e) {
-                plugin.getPluginLogger().warning("Matériau invalide dans la mine " + mineId + ": " + blockName);
-            }
-        }
-
-        // Informations de la mine
-        String displayName = section.getString("display-name", mineId);
-        String description = section.getString("description", "");
-        long rankupPrice = section.getLong("rankup-price", -1);
-
-        // Déterminer le type de mine
-        MineType type = determineMineType(mineId);
-
-        // Conditions d'accès spéciales
-        int requiredPrestige = section.getInt("required-prestige", -1);
-        String requiredRank = section.getString("required-rank", null);
-        String requiredPermission = section.getString("required-permission", null);
-
-        return new MineData(mineId, worldName, minX, minY, minZ, maxX, maxY, maxZ,
-                blockComposition, displayName, description, rankupPrice, type,
-                requiredPrestige, requiredRank, requiredPermission);
-    }
-
-    /**
-     * Détermine le type d'une mine basé sur son ID
-     */
-    private MineType determineMineType(String mineId) {
-        if (mineId.startsWith("mine-prestige")) {
-            return MineType.PRESTIGE;
-        } else if (mineId.startsWith("mine-vip")) {
-            return MineType.VIP;
-        } else {
-            return MineType.NORMAL;
-        }
-    }
-
-    /**
-     * Vérifie si un joueur peut accéder à une mine
+     * Vérifie l'accès d'un joueur à une mine
      */
     public boolean canAccessMine(Player player, String mineId) {
         MineData mine = mines.get(mineId);
@@ -138,124 +153,34 @@ public class MineManager {
 
         PlayerData playerData = plugin.getPlayerDataManager().getPlayerData(player.getUniqueId());
 
-        switch (mine.getType()) {
-            case NORMAL -> {
-                return canAccessNormalMine(player, mineId);
-            }
-            case PRESTIGE -> {
-                return canAccessPrestigeMine(player, mine, playerData);
-            }
-            case VIP -> {
-                return canAccessVipMine(player, mine);
-            }
-        }
-
-        return false;
-    }
-
-    /**
-     * Vérifie l'accès aux mines normales (A-Z)
-     */
-    private boolean canAccessNormalMine(Player player, String mineId) {
-        if (mineId.equals("mine-a")) return true; // Mine A toujours accessible
-
-        PlayerData playerData = plugin.getPlayerDataManager().getPlayerData(player.getUniqueId());
-
-        // Extraire la lettre de la mine
-        if (mineId.startsWith("mine-") && mineId.length() >= 6) {
-            String rank = mineId.substring(5); // Récupère la lettre après "mine-"
-            return playerData.hasMinePermission(rank);
-        }
-
-        return false;
-    }
-
-    /**
-     * Vérifie l'accès aux mines prestige
-     */
-    private boolean canAccessPrestigeMine(Player player, MineData mine, PlayerData playerData) {
-        // Vérifier le niveau de prestige requis
-        if (mine.getRequiredPrestige() > 0 && playerData.getPrestigeLevel() < mine.getRequiredPrestige()) {
+        // Vérification VIP
+        if (mine.isVipOnly() && !player.hasPermission("specialmine.vip")) {
             return false;
         }
 
-        // Vérifier le rang requis (généralement Z)
-        if (mine.getRequiredRank() != null) {
+        // Vérification permission spécifique
+        if (mine.getRequiredPermission() != null && !player.hasPermission(mine.getRequiredPermission())) {
+            return false;
+        }
+
+        // Vérification prestige
+        if (mine.getRequiredPrestige() > playerData.getPrestigeLevel()) {
+            return false;
+        }
+
+        // Vérification rang (pour mines normales)
+        if (mine.getType() == MineData.MineType.NORMAL) {
             String currentRank = getCurrentRank(player);
-            if (!currentRank.equals(mine.getRequiredRank()) && !playerData.hasCustomPermission("specialmine.free")) {
-                return false;
-            }
+            String requiredRank = mine.getRequiredRank();
+
+            return isRankSufficient(currentRank, requiredRank);
         }
 
         return true;
     }
 
     /**
-     * Vérifie l'accès aux mines VIP
-     */
-    private boolean canAccessVipMine(Player player, MineData mine) {
-        if (mine.getRequiredPermission() != null) {
-            return player.hasPermission(mine.getRequiredPermission());
-        }
-        return player.hasPermission("specialmine.vip");
-    }
-
-    /**
-     * Génère les blocs d'une mine selon sa composition
-     */
-    public void generateMine(String mineId) {
-        MineData mine = mines.get(mineId);
-        if (mine == null) return;
-
-        World world = Bukkit.getWorld(mine.getWorldName());
-        if (world == null) {
-            plugin.getPluginLogger().warning("Monde introuvable pour la mine: " + mineId);
-            return;
-        }
-
-        // Calculer le nombre total de blocs
-        int totalBlocks = (mine.getMaxX() - mine.getMinX() + 1) *
-                (mine.getMaxY() - mine.getMinY() + 1) *
-                (mine.getMaxZ() - mine.getMinZ() + 1);
-
-        plugin.getPluginLogger().info("Génération de la mine " + mineId + " (" + totalBlocks + " blocs)");
-
-        // Générer les blocs
-        for (int x = mine.getMinX(); x <= mine.getMaxX(); x++) {
-            for (int y = mine.getMinY(); y <= mine.getMaxY(); y++) {
-                for (int z = mine.getMinZ(); z <= mine.getMaxZ(); z++) {
-                    Block block = world.getBlockAt(x, y, z);
-                    Material material = getRandomMaterial(mine.getBlockComposition());
-                    block.setType(material);
-                }
-            }
-        }
-
-        // Mettre à jour le temps de reset
-        mineResetTimes.put(mineId, System.currentTimeMillis());
-        plugin.getPluginLogger().info("Mine " + mineId + " générée avec succès!");
-    }
-
-    /**
-     * Sélectionne un matériau aléatoire selon les probabilités
-     */
-    private Material getRandomMaterial(Map<Material, Double> composition) {
-        double randomValue = random.nextDouble();
-        double cumulativeProbability = 0.0;
-
-        for (Map.Entry<Material, Double> entry : composition.entrySet()) {
-            cumulativeProbability += entry.getValue();
-            if (randomValue <= cumulativeProbability) {
-                return entry.getKey();
-            }
-        }
-
-        // Fallback vers le premier matériau si aucun n'est trouvé
-        return composition.keySet().iterator().next();
-    }
-
-    /**
-     * Téléporte un joueur vers une mine
+     * Téléporte un joueur à une mine
      */
     public boolean teleportToMine(Player player, String mineId) {
         if (!canAccessMine(player, mineId)) {
@@ -275,16 +200,12 @@ public class MineManager {
             return false;
         }
 
-        // Calculer le centre de la mine
-        double centerX = (mine.getMinX() + mine.getMaxX()) / 2.0 + 0.5;
-        double centerY = mine.getMaxY() + 1.0; // Au-dessus de la mine
-        double centerZ = (mine.getMinZ() + mine.getMaxZ()) / 2.0 + 0.5;
-
-        Location teleportLocation = new Location(world, centerX, centerY, centerZ);
+        // Utilise la nouvelle méthode getCenterLocation
+        Location teleportLocation = mine.getCenterLocation(world);
 
         // S'assurer qu'il y a de l'air pour le joueur
         Block airBlock1 = teleportLocation.getBlock();
-        Block airBlock2 = teleportLocation.add(0, 1, 0).getBlock();
+        Block airBlock2 = teleportLocation.clone().add(0, 1, 0).getBlock();
 
         if (airBlock1.getType() != Material.AIR) {
             airBlock1.setType(Material.AIR);
@@ -301,31 +222,7 @@ public class MineManager {
     }
 
     /**
-     * Obtient la liste des mines accessibles pour un joueur
-     */
-    public List<MineData> getAccessibleMines(Player player) {
-        List<MineData> accessible = new ArrayList<>();
-
-        for (MineData mine : mines.values()) {
-            if (canAccessMine(player, mine.getId())) {
-                accessible.add(mine);
-            }
-        }
-
-        // Trier par ordre alphabétique/numérique
-        accessible.sort((a, b) -> {
-            // Priorité: Normal < VIP < Prestige
-            if (a.getType() != b.getType()) {
-                return a.getType().ordinal() - b.getType().ordinal();
-            }
-            return a.getId().compareToIgnoreCase(b.getId());
-        });
-
-        return accessible;
-    }
-
-    /**
-     * Obtient les informations d'une mine
+     * Obtient les informations détaillées d'une mine
      */
     public String getMineInfo(Player player, String mineId) {
         MineData mine = mines.get(mineId);
@@ -334,46 +231,30 @@ public class MineManager {
         }
 
         StringBuilder info = new StringBuilder();
-        info.append("§6📍 Informations - ").append(mine.getDisplayName()).append("\n");
-        info.append("§7Description: ").append(mine.getDescription()).append("\n");
-        info.append("§7Type: ").append(getMineTypeDisplay(mine.getType())).append("\n");
+        info.append("§6═══════════════════════════════════\n");
+        info.append("§6         📍 ").append(mine.getDisplayName()).append("\n");
+        info.append("§6═══════════════════════════════════\n");
 
-        // Conditions d'accès
-        if (!canAccessMine(player, mineId)) {
-            info.append("§c🔒 ACCÈS VERROUILLÉ\n");
+        // Utilise la nouvelle méthode getDetailedInfo
+        info.append(mine.getDetailedInfo()).append("\n");
 
-            switch (mine.getType()) {
-                case PRESTIGE -> {
-                    if (mine.getRequiredPrestige() > 0) {
-                        PlayerData playerData = plugin.getPlayerDataManager().getPlayerData(player.getUniqueId());
-                        info.append("§7Prestige requis: §6P").append(mine.getRequiredPrestige())
-                                .append(" §7(Actuel: P").append(playerData.getPrestigeLevel()).append(")\n");
-                    }
-                    if (mine.getRequiredRank() != null) {
-                        info.append("§7Rang requis: ").append(mine.getRequiredRank().toUpperCase()).append("\n");
-                    }
-                }
-                case VIP -> {
-                    info.append("§7Permission VIP requise\n");
-                }
-                case NORMAL -> {
-                    String currentRank = getCurrentRank(player);
-                    String requiredRank = mine.getId().replace("mine-", "");
-                    info.append("§7Rang requis: ").append(requiredRank.toUpperCase())
-                            .append(" §7(Actuel: ").append(currentRank.toUpperCase()).append(")\n");
-                }
+        // Informations d'accès
+        boolean canAccess = canAccessMine(player, mineId);
+        info.append("§7Accès: ").append(canAccess ? "§a✅ Autorisé" : "§c❌ Interdit").append("\n");
+
+        // Conditions d'accès si bloqué
+        if (!canAccess) {
+            if (mine.getRequiredPrestige() > 0) {
+                PlayerData playerData = plugin.getPlayerDataManager().getPlayerData(player.getUniqueId());
+                info.append("§7Prestige requis: §d").append(mine.getRequiredPrestige())
+                        .append(" §7(actuel: §d").append(playerData.getPrestigeLevel()).append("§7)\n");
             }
-        } else {
-            info.append("§a✅ ACCÈS AUTORISÉ\n");
-        }
-
-        // Composition des blocs
-        info.append("§e⚒ Composition:\n");
-        for (Map.Entry<Material, Double> entry : mine.getBlockComposition().entrySet()) {
-            String materialName = entry.getKey().toString().toLowerCase().replace("_", " ");
-            double percentage = entry.getValue() * 100;
-            String percentageStr = percentage < 1 ? String.format("%.2f%%", percentage) : String.format("%.0f%%", percentage);
-            info.append("§7• ").append(materialName).append(": ").append(percentageStr).append("\n");
+            if (mine.isVipOnly()) {
+                info.append("§7Statut VIP requis\n");
+            }
+            if (mine.getRequiredPermission() != null) {
+                info.append("§7Permission requise: §e").append(mine.getRequiredPermission()).append("\n");
+            }
         }
 
         // Temps depuis le dernier reset
@@ -387,25 +268,234 @@ public class MineManager {
     }
 
     /**
-     * Affichage du type de mine
+     * Obtient les mines accessibles pour un joueur
      */
-    private String getMineTypeDisplay(MineType type) {
-        return switch (type) {
-            case NORMAL -> "§fNormale";
-            case PRESTIGE -> "§dPrestige";
-            case VIP -> "§6VIP";
-        };
+    public List<MineData> getAccessibleMines(Player player) {
+        List<MineData> accessible = new ArrayList<>();
+
+        for (MineData mine : mines.values()) {
+            if (canAccessMine(player, mine.getId())) {
+                accessible.add(mine);
+            }
+        }
+
+        // Trier par type puis par nom
+        accessible.sort((a, b) -> {
+            if (a.getType() != b.getType()) {
+                return a.getType().ordinal() - b.getType().ordinal();
+            }
+            return a.getId().compareToIgnoreCase(b.getId());
+        });
+
+        return accessible;
     }
 
     /**
      * Obtient les mines par type
      */
-    public List<MineData> getMinesByType(MineType type) {
+    public List<MineData> getMinesByType(MineData.MineType type) {
         return mines.values().stream()
                 .filter(mine -> mine.getType() == type)
                 .sorted((a, b) -> a.getId().compareToIgnoreCase(b.getId()))
-                .toList();
+                .collect(Collectors.toList());
     }
+
+    /**
+     * Vérifie si un joueur est dans une mine
+     */
+    public String getPlayerCurrentMine(Player player) {
+        Location playerLocation = player.getLocation();
+
+        for (Map.Entry<String, MineData> entry : mines.entrySet()) {
+            if (entry.getValue().contains(playerLocation)) {
+                return entry.getKey();
+            }
+        }
+
+        return null;
+    }
+
+    /**
+     * Notifie tous les joueurs présents dans une mine
+     */
+    private void notifyPlayersInMine(String mineId, String message) {
+        MineData mine = mines.get(mineId);
+        if (mine == null) return;
+
+        for (Player player : Bukkit.getOnlinePlayers()) {
+            String playerMine = getPlayerCurrentMine(player);
+            if (mineId.equals(playerMine)) {
+                player.sendMessage(message);
+            }
+        }
+    }
+
+    /**
+     * Lance le scheduler de reset automatique des mines
+     */
+    private void startMineResetScheduler() {
+        Bukkit.getScheduler().runTaskTimer(plugin, () -> {
+            long currentTime = System.currentTimeMillis();
+            long resetInterval = 1800000; // 30 minutes par défaut
+
+            for (Map.Entry<String, Long> entry : mineResetTimes.entrySet()) {
+                String mineId = entry.getKey();
+                long lastReset = entry.getValue();
+
+                if (currentTime - lastReset > resetInterval) {
+                    plugin.getPluginLogger().debug("Reset automatique de la mine: " + mineId);
+                    generateMine(mineId);
+                }
+            }
+        }, 0L, 6000L); // Vérifie toutes les 5 minutes (6000 ticks)
+    }
+
+    /**
+     * Force le reset d'une mine
+     */
+    public void forceResetMine(String mineId) {
+        if (!mines.containsKey(mineId)) {
+            plugin.getPluginLogger().warning("Tentative de reset d'une mine inexistante: " + mineId);
+            return;
+        }
+
+        plugin.getPluginLogger().info("Reset forcé de la mine: " + mineId);
+        generateMine(mineId);
+    }
+
+    /**
+     * Force le reset de toutes les mines
+     */
+    public void resetAllMines() {
+        plugin.getPluginLogger().info("Reset de toutes les mines...");
+
+        for (String mineId : mines.keySet()) {
+            generateMine(mineId);
+        }
+    }
+
+    /**
+     * Recharge les mines depuis la configuration
+     */
+    public void reloadMines() {
+        plugin.getPluginLogger().info("§7Rechargement des mines...");
+
+        mines.clear();
+        mineResetTimes.clear();
+        mineGenerating.clear();
+
+        loadMinesFromConfigManager();
+        plugin.getPluginLogger().info("§aMines rechargées!");
+    }
+
+    /**
+     * Obtient les statistiques des mines
+     */
+    public String getMinesStatistics() {
+        StringBuilder stats = new StringBuilder();
+
+        stats.append("§6═══════════════════════════════════\n");
+        stats.append("§6         📊 STATISTIQUES MINES\n");
+        stats.append("§6═══════════════════════════════════\n");
+
+        int normalCount = getMinesByType(MineData.MineType.NORMAL).size();
+        int prestigeCount = getMinesByType(MineData.MineType.PRESTIGE).size();
+        int vipCount = getMinesByType(MineData.MineType.VIP).size();
+
+        stats.append("§f📍 Mines normales: §7").append(normalCount).append("\n");
+        stats.append("§d📍 Mines prestige: §7").append(prestigeCount).append("\n");
+        stats.append("§6📍 Mines VIP: §7").append(vipCount).append("\n");
+        stats.append("§e📊 Total: §7").append(mines.size()).append(" mines\n");
+
+        // Mines en cours de génération
+        long generating = mineGenerating.values().stream().mapToLong(b -> b ? 1 : 0).sum();
+        if (generating > 0) {
+            stats.append("§c⚡ En génération: §7").append(generating).append("\n");
+        }
+
+        return stats.toString();
+    }
+
+    // ==================== MÉTHODES UTILITAIRES ====================
+
+    /**
+     * Obtient le rang actuel d'un joueur
+     */
+    public String getCurrentRank(Player player) {
+        // Cherche la permission de rang la plus élevée
+        String highestPermission = null;
+        for (String permission : player.getEffectivePermissions().stream()
+                .map(perm -> perm.getPermission())
+                .filter(perm -> perm.startsWith("specialmine.mine."))
+                .collect(Collectors.toSet())) {
+
+            if (highestPermission == null || permission.compareTo(highestPermission) > 0) {
+                highestPermission = permission;
+            }
+        }
+
+        if (highestPermission != null) {
+            return highestPermission.substring("specialmine.mine.".length());
+        }
+        return "a";
+    }
+
+    /**
+     * Vérifie si un rang est suffisant pour accéder à une mine
+     */
+    private boolean isRankSufficient(String currentRank, String requiredRank) {
+        if (currentRank == null || requiredRank == null) return false;
+        return currentRank.compareToIgnoreCase(requiredRank) >= 0;
+    }
+
+    /**
+     * Obtient la couleur d'un rang
+     */
+    public String getRankColor(String rank) {
+        if (rank == null) return "§7";
+
+        return switch (rank.toLowerCase()) {
+            case "a", "b", "c", "d", "e" -> "§f";
+            case "f", "g", "h", "i", "j" -> "§a";
+            case "k", "l", "m", "n", "o" -> "§e";
+            case "p", "q", "r", "s", "t" -> "§6";
+            case "u", "v", "w", "x", "y", "z" -> "§c";
+            default -> "§7";
+        };
+    }
+
+    /**
+     * Convertit un nom de rang en numéro (a=1, b=2, etc.)
+     */
+    public int rankToNumber(String rank) {
+        if (rank == null || rank.length() != 1) return 0;
+        char c = rank.toLowerCase().charAt(0);
+        if (c >= 'a' && c <= 'z') {
+            return c - 'a' + 1;
+        }
+        return 0;
+    }
+
+    /**
+     * Convertit un numéro en nom de rang (1=a, 2=b, etc.)
+     */
+    public String numberToRank(int number) {
+        if (number < 1 || number > 26) return "a";
+        return String.valueOf((char) ('a' + number - 1));
+    }
+
+    /**
+     * NOUVEAU: Obtient le rang et sa couleur d'un joueur
+     * @param player Le joueur
+     * @return String[] avec [0] = rang, [1] = couleur
+     */
+    public String[] getRankAndColor(Player player) {
+        String currentRank = getCurrentRank(player);
+        String rankColor = getRankColor(currentRank);
+        return new String[]{currentRank, rankColor};
+    }
+
+    // ==================== GETTERS ====================
 
     /**
      * Obtient une mine par son ID
@@ -422,257 +512,58 @@ public class MineManager {
     }
 
     /**
-     * Lance le scheduler de reset automatique des mines
+     * Vérifie si une mine existe
      */
-    private void startMineResetScheduler() {
-        Bukkit.getScheduler().runTaskTimer(plugin, () -> {
-            // Reset automatique toutes les 30 minutes
-            long currentTime = System.currentTimeMillis();
-            for (Map.Entry<String, Long> entry : mineResetTimes.entrySet()) {
-                if (currentTime - entry.getValue() >= 30 * 60 * 1000) { // 30 minutes
-                    generateMine(entry.getKey());
-                }
-            }
-        }, 20L * 60L, 20L * 60L); // Vérification chaque minute
-    }
-
-    // ==================== MÉTHODES EXISTANTES CONSERVÉES ====================
-
-    /**
-     * Détermine le rang et les couleurs du joueur
-     *
-     * @param player Le joueur
-     * @return [rang, couleur du nom, couleur du rang, rang mine, couleur rang mine]
-     */
-    public String[] getRankAndColor(Player player) {
-
-        String currentRank = getCurrentRank(player);
-        String rankColor = getRankColor(currentRank);
-
-        if (player.hasPermission("specialmine.admin")) {
-            return new String[]{"ADMIN", ChatColor.RED.toString(), ChatColor.DARK_RED.toString(), currentRank.toUpperCase(), rankColor};
-        } else if (player.hasPermission("specialmine.vip")) {
-            return new String[]{"VIP", ChatColor.GOLD.toString(), ChatColor.YELLOW.toString(), currentRank.toUpperCase(), rankColor};
-        } else {
-            return new String[]{"JOUEUR", ChatColor.GRAY.toString(), ChatColor.DARK_GRAY.toString(), currentRank.toUpperCase(), rankColor};
-        }
+    public boolean mineExists(String mineId) {
+        return mines.containsKey(mineId);
     }
 
     /**
-     * Obtient la couleur progressive pour un rang de mine (a-z)
+     * Obtient le nombre total de mines
      */
-    public String getRankColor(String rank) {
-        if (rank == null || rank.isEmpty()) return ChatColor.GRAY.toString();
-
-        // Couleur spéciale pour FREE
-        if (rank.equalsIgnoreCase("free")) {
-            return ChatColor.LIGHT_PURPLE.toString() + ChatColor.BOLD.toString(); // Violet gras
-        }
-
-        char rankChar = rank.toLowerCase().charAt(0);
-
-        // Couleurs progressives de a à z (logique existante)
-        return switch (rankChar) {
-            case 'a', 'b' -> ChatColor.WHITE.toString();
-            case 'c', 'd' -> ChatColor.GRAY.toString();
-            case 'e', 'f' -> ChatColor.DARK_GRAY.toString();
-            case 'g', 'h' -> ChatColor.DARK_GREEN.toString();
-            case 'i', 'j' -> ChatColor.GREEN.toString();
-            case 'k', 'l' -> ChatColor.YELLOW.toString();
-            case 'm', 'n' -> ChatColor.GOLD.toString();
-            case 'o', 'p' -> ChatColor.RED.toString();
-            case 'q', 'r' -> ChatColor.DARK_RED.toString();
-            case 's', 't' -> ChatColor.LIGHT_PURPLE.toString();
-            case 'u', 'v' -> ChatColor.DARK_PURPLE.toString();
-            case 'w', 'x' -> ChatColor.BLUE.toString();
-            case 'y' -> ChatColor.AQUA.toString();
-            case 'z' -> ChatColor.GOLD.toString() + ChatColor.BOLD;
-            default -> ChatColor.GRAY.toString();
-        };
+    public int getMineCount() {
+        return mines.size();
     }
 
     /**
-     * CORRIGÉ: Obtient le rang actuel du joueur via les permissions bukkit
+     * Obtient les noms de toutes les mines
      */
-    public String getCurrentRank(Player player) {
-        var playerData = plugin.getPlayerDataManager().getPlayerData(player.getUniqueId());
-
-        // Vérifier d'abord si le joueur a le rang FREE
-        if (playerData.hasCustomPermission("specialmine.free")) {
-            return "free";
-        }
-
-        // Logique existante pour les rangs a-z
-        String highestPermission = playerData.getHighestMinePermission();
-        if (highestPermission == null) {
-            return "a"; // Rang par défaut
-        }
-
-        if (highestPermission.startsWith("specialmine.mine.")) {
-            return highestPermission.substring("specialmine.mine.".length());
-        }
-        return "a";
-    }
-
-    // ==================== CLASSE INTERNE MineData ====================
-
-    /**
-     * Représente les données d'une mine
-     */
-    public static class MineData {
-        private final String id;
-        private final String worldName;
-        private final int minX, minY, minZ, maxX, maxY, maxZ;
-        private final Map<Material, Double> blockComposition;
-        private final String displayName;
-        private final String description;
-        private final long rankupPrice;
-        private final MineType type;
-        private final int requiredPrestige;
-        private final String requiredRank;
-        private final String requiredPermission;
-
-        public MineData(String id, String worldName, int minX, int minY, int minZ,
-                        int maxX, int maxY, int maxZ, Map<Material, Double> blockComposition,
-                        String displayName, String description, long rankupPrice,
-                        MineType type, int requiredPrestige, String requiredRank,
-                        String requiredPermission) {
-            this.id = id;
-            this.worldName = worldName;
-            this.minX = minX;
-            this.minY = minY;
-            this.minZ = minZ;
-            this.maxX = maxX;
-            this.maxY = maxY;
-            this.maxZ = maxZ;
-            this.blockComposition = new HashMap<>(blockComposition);
-            this.displayName = displayName;
-            this.description = description;
-            this.rankupPrice = rankupPrice;
-            this.type = type;
-            this.requiredPrestige = requiredPrestige;
-            this.requiredRank = requiredRank;
-            this.requiredPermission = requiredPermission;
-        }
-
-        // Getters
-        public String getId() { return id; }
-        public String getWorldName() { return worldName; }
-        public int getMinX() { return minX; }
-        public int getMinY() { return minY; }
-        public int getMinZ() { return minZ; }
-        public int getMaxX() { return maxX; }
-        public int getMaxY() { return maxY; }
-        public int getMaxZ() { return maxZ; }
-        public Map<Material, Double> getBlockComposition() { return new HashMap<>(blockComposition); }
-        public String getDisplayName() { return displayName; }
-        public String getDescription() { return description; }
-        public long getRankupPrice() { return rankupPrice; }
-        public MineType getType() { return type; }
-        public int getRequiredPrestige() { return requiredPrestige; }
-        public String getRequiredRank() { return requiredRank; }
-        public String getRequiredPermission() { return requiredPermission; }
-
-        /**
-         * Vérifie si la mine contient des beacons
-         */
-        public boolean hasBeacons() {
-            return blockComposition.containsKey(Material.BEACON) && blockComposition.get(Material.BEACON) > 0;
-        }
-
-        /**
-         * Obtient le taux de beacons de la mine
-         */
-        public double getBeaconRate() {
-            return blockComposition.getOrDefault(Material.BEACON, 0.0) * 100;
-        }
-
-        /**
-         * Vérifie si un point est dans la mine
-         */
-        public boolean contains(int x, int y, int z) {
-            return x >= minX && x <= maxX && y >= minY && y <= maxY && z >= minZ && z <= maxZ;
-        }
-
-        /**
-         * Calcule le volume de la mine
-         */
-        public int getVolume() {
-            return (maxX - minX + 1) * (maxY - minY + 1) * (maxZ - minZ + 1);
-        }
-    }
-
-    public String getPlayerHighestRank(Player player) {
-        // Parcourt les rangs de z à a pour trouver le plus élevé
-        for (char c = 'z'; c >= 'a'; c--) {
-            String rank = String.valueOf(c);
-            if (player.hasPermission("specialmine.mine." + rank)) {
-                return rank;
-            }
-        }
-
-        return null; // Aucune permission trouvée
+    public Set<String> getMineNames() {
+        return new HashSet<>(mines.keySet());
     }
 
     /**
-     * NOUVEAU: Vérifie si un joueur peut miner dans une location spécifique
+     * Vérifie si une mine est en cours de génération
      */
-    public boolean canMineAtLocation(Player player, Location location) {
-        // Vérifie si c'est dans une mine
-        String mineName = plugin.getConfigManager().getPlayerMine(location);
-        if (mineName == null) {
-            return true; // Hors mine, peut miner avec n'importe quel outil
-        }
-
-        // Vérifie la pioche légendaire
-        if (!canMineBlock(location, player)) {
-            return false;
-        }
-
-        // Vérifie les permissions hiérarchiques
-        return hasAccessToMine(player, mineName);
+    public boolean isMineGenerating(String mineId) {
+        return mineGenerating.getOrDefault(mineId, false);
     }
 
-    public boolean hasAccessToMine(Player player, String mineName) {
-        if (mineName == null || mineName.isEmpty()) {
-            return true;
-        }
-
-        // Normalise le nom de la mine
-        String targetMine = mineName.toLowerCase();
-        if (targetMine.startsWith("mine-")) {
-            targetMine = targetMine.substring(5);
-        }
-
-        // Rang A toujours accessible
-        if (targetMine.equals("a")) {
-            return true;
-        }
-
-        // Trouve le rang le plus élevé du joueur
-        String highestRank = getPlayerHighestRank(player);
-        if (highestRank == null) {
-            return false; // Aucune permission
-        }
-
-        // LOGIQUE HIÉRARCHIQUE: compare les rangs
-        char playerRank = highestRank.charAt(0);
-        char targetRank = targetMine.charAt(0);
-
-        return targetRank <= playerRank;
+    /**
+     * Obtient le temps du dernier reset d'une mine
+     */
+    public Long getLastResetTime(String mineId) {
+        return mineResetTimes.get(mineId);
     }
 
-    public boolean canMineBlock(Location location, Player player) {
-        // Vérifie si le joueur est dans une mine
-        String mineName = plugin.getConfigManager().getPlayerMine(location);
-        if (mineName == null) {
-            // Hors mine: peut miner avec n'importe quel outil
-            return true;
-        }
+    /**
+     * Obtient toutes les mines triées par nom
+     */
+    public List<MineData> getAllMinesSorted() {
+        return mines.values().stream()
+                .sorted((a, b) -> a.getId().compareToIgnoreCase(b.getId()))
+                .collect(Collectors.toList());
+    }
 
-        // Dans une mine: seule la pioche légendaire peut miner
-        var handItem = player.getInventory().getItemInMainHand();
-        return plugin.getPickaxeManager().isLegendaryPickaxe(handItem) &&
-                plugin.getPickaxeManager().isOwner(handItem, player);
+    /**
+     * Recherche des mines par nom partiel
+     */
+    public List<MineData> searchMines(String query) {
+        String lowerQuery = query.toLowerCase();
+        return mines.values().stream()
+                .filter(mine -> mine.getId().toLowerCase().contains(lowerQuery) ||
+                        mine.getDisplayName().toLowerCase().contains(lowerQuery))
+                .sorted((a, b) -> a.getId().compareToIgnoreCase(b.getId()))
+                .collect(Collectors.toList());
     }
 }
